# simple-synth

./: Cargo.toml  README.md
src/: main.rs
